<resources>
    <string name="app_name">Hungry</string>
    <string name="username_title">姓名</string>
    <string name="username_hint">王小明 (僅能包含英文、數字、底線和中文)</string>
    <string name="email_title">Email</string>
    <string name="email_hint">fcu123@gmail.com</string>
    <string name="password_title">密碼</string>
    <string name="password_hint">12字元↑ (需含大小寫字母、數字和特殊符號)</string>
    <string name="confirm_password_title">確認密碼</string>
    <string name="confirm_password_hint">輸入的密碼需一致</string>
    <string name="phone_title">手機號碼</string>
    <string name="phone_hint">0800092000</string>
    <string name="register_btn">註冊</string>
    <string name="already_have_account">已經有帳號了嗎?</string>
    <string name="login_title">登入</string>
    <string name="login_btn">登入</string>
    <string name="another_way_login">或使用其它方式登入</string>
    <string name="not_have_account">還沒有帳號嗎?</string>
    <string name="general_users">一般用戶</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string-array name="time_array">
        <item>請選擇</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string-array name="seat">
        <item>請選擇</item>
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>

</resources>