<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="732dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="412dp"
            android:minHeight="732dp">

            <ImageView
                android:id="@+id/iv_register_app_logo"
                android:layout_width="103dp"
                android:layout_height="137dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/kitchen_accessories" />

            <ImageView
                android:id="@+id/iv_register_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="54dp"
                app:layout_constraintStart_toEndOf="@+id/iv_register_app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/title" />

            <TextView
                android:id="@+id/tv_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/username_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_register_app_logo" />

            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/edittext_background"
                android:ems="20"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_name"
                app:layout_constraintWidth_percent="0.85" />

            <TextView
                android:id="@+id/tv_register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/email_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_name" />

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="email"
                android:background="@drawable/edittext_background"
                android:ems="50"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_email"
                app:layout_constraintWidth_percent="0.85" />

            <TextView
                android:id="@+id/tv_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/password_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_email"
                app:layout_constraintStart_toStartOf="@+id/tv_register_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_email" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/edittext_background"
                android:ems="50"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_password"
                app:layout_constraintWidth_percent="0.85" />

            <TextView
                android:id="@+id/tv_register_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/confirm_password_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_password" />

            <EditText
                android:id="@+id/et_register_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:ems="50"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_confirm_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_confirm_password"
                app:layout_constraintWidth_percent="0.85" />

            <TextView
                android:id="@+id/tv_register_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/phone_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/tv_register_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_confirm_password" />

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="phone"
                android:background="@drawable/edittext_background"
                android:ems="20"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_phone"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_phone"
                app:layout_constraintWidth_percent="0.85" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="@string/register_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/et_register_phone"
                app:layout_constraintStart_toStartOf="@+id/et_register_phone"
                app:layout_constraintTop_toBottomOf="@+id/et_register_phone"
                app:layout_constraintWidth_percent="0.85" />

            <TextView
                android:id="@+id/tv_register_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="200dp"
                android:text="@string/already_have_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_register_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_register_phone"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <TextView
                android:id="@+id/tv_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/login_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/login_register_btn_background"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_register_already_have_account"
                app:layout_constraintStart_toEndOf="@+id/tv_register_already_have_account"
                app:layout_constraintTop_toTopOf="@+id/tv_register_already_have_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>